fix formatting + launching JavaFX application launching